--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/miwok_word"
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        android:paddingRight="16dp"/>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="lutti"/>
+        android:orientation="vertical"
+>
 
-    <TextView
-        android:id="@+id/default_word"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="one"/>
+        <TextView
+            android:id="@+id/miwok_word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="lutti" />
 
+        <TextView
+            android:id="@+id/default_word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="one" />
+
+    </LinearLayout>
 </LinearLayout>
